fix component overflow

--- a/frontend/src/views/OmakaseTamsPlayer/style.css
+++ b/frontend/src/views/OmakaseTamsPlayer/style.css
@@ -41,3 +41,9 @@
   outline: none;
   box-shadow: none;
 }
+
+#omakase-marker-list,
+#omakase-marker-toolbar {
+  min-width: 0;
+  overflow-x: auto;
+}
